# rental-scraper

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  FACEBOOK_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  START_HERE.md  cloudbuild.yaml  dashboard.html  demo.py  demo_complete.py  pyproject.toml  refresh_dashboard.py
.old/: description_parser.py  storage.py  test_description_parser.py
infra/: setup-gcp.sh  setup-github.sh  teardown-gcp.sh
src/rental_scraper/: __init__.py  description_parser.py  facebook_extractor.py  models.py  run.py  storage.py
src/rental_scraper/scrapers/: __init__.py  base.py  craigslist.py  facebook.py  kijiji.py
tests/: test_base_scraper.py  test_craigslist.py  test_description_parser.py  test_kijiji.py
